[gd_scene load_steps=10 format=3 uid="uid://bf5ep8mtv7t1y"]

[ext_resource type="Script" uid="uid://do81ftnc4riq7" path="res://Modules/Tactical/Entities/MercEntity.gd" id="1_8k0p0"]
[ext_resource type="Script" uid="uid://0m0im3aqyfpi" path="res://Modules/Tactical/Components/SoldierState.gd" id="2_5j1b"]
[ext_resource type="Script" uid="uid://bvfsj1tfcc0fr" path="res://Modules/Tactical/Components/MovementComponent.gd" id="3_0k2a"]
[ext_resource type="Script" uid="uid://bopmcab4h766b" path="res://Modules/Tactical/Components/CombatComponent.gd" id="4_1b3c"]
[ext_resource type="Script" uid="uid://di8hofdjedru6" path="res://Modules/Tactical/Components/VisionComponent.gd" id="5_2d3b"]
[ext_resource type="Script" uid="uid://cy8g77yma51lo" path="res://Modules/Tactical/Components/InventoryComponent.gd" id="6_3e4c"]
[ext_resource type="Script" uid="uid://c0q4uhkw3tpro" path="res://Modules/Tactical/Components/AIComponent.gd" id="7_4f5d"]

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(0.6, 1.8, 0.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(0.6, 1.8, 0.6)

[node name="MercEntity" type="Node3D"]
script = ExtResource("1_8k0p0")
merc_id = "merc_unknown"
merc_name = "Unknown"
faction = "player"
agility = 50
marksmanship = 50
wisdom = 50
strength = 50
armor_value = 0
armor_type = "medium"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_1")

[node name="WeaponMountPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.5, 0)
gizmo_extents = 0.2

[node name="SoldierState" type="Node" parent="."]
script = ExtResource("2_5j1b")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("3_0k2a")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("4_1b3c")

[node name="VisionComponent" type="Node" parent="."]
script = ExtResource("5_2d3b")

[node name="InventoryComponent" type="Node" parent="."]
script = ExtResource("6_3e4c")

[node name="AIComponent" type="Node" parent="."]
script = ExtResource("7_4f5d")
